<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grabz Shopper</string>
    <string name="tap_here_message">Tap your phone on NFC tag</string>
    <string name="tap_and_go_description">Tap your phone on the NFC tag</string>
    <string name="action_settings">Settings</string>
    <string name="message"></string>
    <string name="title_activity_items_in_aisle">ItemsInAisleActivity</string>
    <string name="item_name_header">Item Name</string>
    <string name="price_header">Price</string>

    <string-array name="left_navigation_array">
        <item>Home</item>
        <item>Promotions</item>
        <item>About Grabz</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_home_tabbed">HomeTabbedActivity</string>
    <string name="title_section2">My Lists</string>
    <string name="title_section1">Aisle Items</string>

    <string name="hintTxtItem">New list name...</string>
    <string name="lblBtnAdd">Add</string>
    <string name="txtEmpty">No Shopping List has been created. Type a name and tap on + to begin</string>
    <string name="listEmpty">Shopping list is empty. Tap on + icon to start adding items</string>
    <string name="rename">Rename</string>
    <string name="title_activity_item_detail">ItemDetail</string>
    <string name="awsLink">http://grabztestenv.elasticbeanstalk.com</string>
    <string name="title_activity_basket">BasketActivity</string>


    <string name="about_us">Our mission is to build better shopping experience for our customers.\n\n
        To learn more about Grabz, visit our
        <a href="http://amitdikkar.x10host.com/grabz/grabz_web/appstar/demo/index4-2.html">website</a>.\n\n
        <b><u>The team</u></b>\n\t\tAmit Dikkar\n\t\tPriyanka Deo\n\t\tSina Nikkhah\n\t\tShaji Thiyarathodi\n
    </string>
</resources>