<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/inputRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="#ccffffff"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/txtItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_weight="2"
            android:hint="@string/hintTxtItem"
            />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lblBtnAdd"
            android:layout_toRightOf="@id/txtItem"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:layout_weight="1"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/emptyTxt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputRow"
        android:paddingTop="16dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtEmpty"
        android:gravity="center_horizontal"
        />

    <ListView
        android:id="@+id/basketList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputRow"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        />
</RelativeLayout>